--- a/templates/send_courier_err.html
+++ b/templates/send_courier_err.html
@@ -80,11 +80,11 @@ document.addEventListener("DOMContentLoaded", function() {
                     const newBlock = document.createElement("div");
                     newBlock.classList.add("block");
                     newBlock.innerHTML = `
-                        <input class="one" name="name" type="text">
-                        <input class="one" name="auto" type="text">
-                        <input class="one" name="number" type="text">
-                        <input class="one" name="phone" type="text">
-                        <input class="one" name="where" type="text">
+                            <input class="one" name="name" type="text" >
+                            <input class="two" name="auto" type="text" >
+                            <input class="three" name="number" type="text">
+                            <input class="four" name="phone" type="text">
+                            <input class="five" name="where" type="text">
                     `;
                     blocksContainer.appendChild(newBlock);
 
@@ -103,11 +103,11 @@ document.addEventListener("DOMContentLoaded", function() {
         const newBlock = document.createElement("div");
         newBlock.classList.add("block");
         newBlock.innerHTML = `
-            <input class="one" name="name" type="text">
-            <input class="one" name="auto" type="text">
-            <input class="one" name="number" type="text">
-            <input class="one" name="phone" type="text">
-            <input class="one" name="where" type="text">
+                <input class="one" name="name" type="text" >
+                <input class="two" name="auto" type="text" >
+                <input class="three" name="number" type="text">
+                <input class="four" name="phone" type="text">
+                <input class="five" name="where" type="text">
         `;
         blocksContainer.appendChild(newBlock);
     });
@@ -180,31 +180,71 @@ document.addEventListener("DOMContentLoaded", function() {
 
                 <div class="block-right">
                     <div class="text">
-                        <h1 class="fill">RATE-THIS PROMOTION</h1>
-                        <h2 class="fill_grade">Добавьте новых курьеров</h2>
-                        <h2 class="fill_grade">Для новых курьеров заполните все данные!</h2>
+                        <h1 class="fill">Курьер</h1>
+                        <div class="butt-one">
+                            <button type="button" class="ruf">Назад</button>
+                            <h1 class="but">Курьер</h1>
+                            <h1 class="bet">/</h1>
+                            <h1 class="bat">Отправить курьера</h1>
+                        </div>
+                        <h1 class="fill_grad">Куда поедут эти курьеры?</h1>
+                        <div class="check-box">
+                            <input class="custom-checkbox" type="checkbox" name="send to partner pvz" id="checkbox-1" value="option1">
+                            <label for="checkbox-1">Отправить только на партнёрские</label>
+                        </div>
+                        <div class="check-box">
+                            <input class="custom-checkbox" type="checkbox" name="send to NOpartner pvz" id="checkbox-2" value="option2">
+                            <label for="checkbox-2">Отправить на не непартнёрские</label>
+                        </div>
+                        <h2 class="fill_grid">Кто эти курьеры?</h2>
+                        <h1 class="fill_graid">Заполните все данные про курьеров</h1>
+                        <div class="fa">
+                            <h1 class="text-one">ФИО</h1>
+                            <h1 class="text-two">Авто</h1>
+                            <h1 class="text-three">Госс номер</h1>
+                            <h1 class="text-four">Телефон</h1>
+                            <h1 class="text-five">Откуда</h1>
+                        </div>
+
                         <div id="blocks-container">
-                            <!-- Поле с одним блоком (по умолчанию) -->
                             <div class="block">
                                 <input class="one" name="name" type="text" >
-                                <input class="one" name="auto" type="text" >
-                                <input class="one" name="number" type="text">
-                                <input class="one" name="phone" type="text">
-                                <input class="one" name="where" type="text">
+                                <input class="two" name="auto" type="text" >
+                                <input class="three" name="number" type="text">
+                                <input class="four" name="phone" type="text">
+                                <input class="five" name="where" type="text">
+                            </div>
+                            <div class="block">
+                                <input class="one" name="name" type="text" >
+                                <input class="two" name="auto" type="text" >
+                                <input class="three" name="number" type="text">
+                                <input class="four" name="phone" type="text">
+                                <input class="five" name="where" type="text">
                             </div>
                         </div>
-                        <button type="button" id="addBlockButton">Добавить блок</button>
-                        <h2 class="fill_grade">Выебрите существующих курьеров в штате:</h2>
+                        <button type="button" class="addBlockButton" id="addBlockButton">+</button>
+                        <h2 class="fill_grid">Штатные курьеры:</h2>
+                        <h1 class="text-one-new">ФИО</h1>
+                        <h1 class="text-two-new">Авто</h1>
+                        <h1 class="text-three-new">Госс номер</h1>
+                        <h1 class="text-four-new">Телефон</h1>
+                        <h1 class="text-five-new">Откуда</h1>
                         {% for el in couriers %}
-                            <h2 class="fill_grade"></h2>
-                            <input class="custom-checkbox" type="checkbox" name="{{ el.id }}" id="checkbox-{{ el.id }}" value="option2">
-                            <label for="checkbox-{{ el.id }}">{{ el.name }}      {{ el.surname }}       {{ el.auto_number }}</label>
+                        <div id="blocks-container" class="block-new">
+                            <div class="check-box-new">
+                                <input class="custom-checkbox" type="checkbox" name="{{ el.id }}" id="checkbox-{{ el.id }}" value="option2">
+                                <label class="label" for="checkbox-{{ el.id }}"></label>
+                            </div>
+                            <div class="check-text">
+                                <h1 class="check-text-one">{{ el.name }} {{ el.surname }}</h1>
+                                <h1 class="check-text-two">{{ el.auto_number }}</h1>
+                            </div>
+                        </div>
                         {% endfor %}
                         <h2 class="fill_grade"></h2>
                         <button type="submit">Продолжить!</button>
                     </div>
                 </div>
-
         </div>
         </form>
     </body>
