--- a/templates/send_courier_err.html
+++ b/templates/send_courier_err.html
@@ -189,23 +189,20 @@ document.addEventListener("DOMContentLoaded", function() {
                         </div>
                         <h1 class="fill_grad">Куда поедут эти курьеры?</h1>
                         <div class="check-box">
-                            <input class="custom-checkbox" type="checkbox" name="send to partner pvz" id="checkbox-1" value="option1">
+                            <input class="custom-checkbox" type="checkbox" name="send to partner pvz" id="checkbox-1" value="option-one">
                             <label for="checkbox-1">Отправить только на партнёрские</label>
                         </div>
                         <div class="check-box">
-                            <input class="custom-checkbox" type="checkbox" name="send to NOpartner pvz" id="checkbox-2" value="option2">
+                            <input class="custom-checkbox" type="checkbox" name="send to NOpartner pvz" id="checkbox-2" value="option-two">
                             <label for="checkbox-2">Отправить на не непартнёрские</label>
                         </div>
                         <h2 class="fill_grid">Кто эти курьеры?</h2>
                         <h1 class="fill_graid">Заполните все данные про курьеров</h1>
-                        <div class="fa">
-                            <h1 class="text-one">ФИО</h1>
-                            <h1 class="text-two">Авто</h1>
-                            <h1 class="text-three">Госс номер</h1>
-                            <h1 class="text-four">Телефон</h1>
-                            <h1 class="text-five">Откуда</h1>
-                        </div>
-
+                        <h1 class="text-one">ФИО</h1>
+                        <h1 class="text-two">Авто</h1>
+                        <h1 class="text-three">Госс номер</h1>
+                        <h1 class="text-four">Телефон</h1>
+                        <h1 class="text-five">Откуда</h1>
                         <div id="blocks-container">
                             <div class="block">
                                 <input class="one" name="name" type="text" >
@@ -232,7 +229,7 @@ document.addEventListener("DOMContentLoaded", function() {
                         {% for el in couriers %}
                         <div id="blocks-container" class="block-new">
                             <div class="check-box-new">
-                                <input class="custom-checkbox" type="checkbox" name="{{ el.id }}" id="checkbox-{{ el.id }}" value="option2">
+                                <input class="custom-checkbox" type="checkbox" name="{{ el.id }}" id="checkbox-{{ el.id }}" value="option-three">
                                 <label class="label" for="checkbox-{{ el.id }}"></label>
                             </div>
                             <div class="check-text">
