--- a/static/main_page.css
+++ b/static/main_page.css
@@ -510,7 +510,6 @@ input:checked + label:before {
 
 .check-text {
     margin-left: 8%;
-    margin-top: -5.5%;
 }
 
 .check-text-one {
@@ -562,7 +561,6 @@ input:checked + .label:before {
     padding: -4px;
 }
 
-
 .fill_graid {
     color: #FF0000;
     font-family: Montserrat, sans-serif;
@@ -574,4 +572,92 @@ input:checked + .label:before {
 
 .fa {
     margin-top: 1%;
+}
+
+.blockone {
+    background-color: white;
+    height: 50px;
+    width: 700px;
+    margin-top: 1%;
+    margin-left: 4%;
+    border: 2px solid rgba(244, 244, 248, 1);
+    border-radius: 10px;
+}
+
+.custom-option {
+    background-color: #C9C9C9;
+    border: 2px solid #C9C9C9;
+    border-radius: 5px;
+    height: 25px;
+    width: 270px;
+    margin-left: 30%;
+}
+
+.opt {
+    margin-top: 1.5%;
+}
+
+.text-curier {
+    padding-left: 15%;
+    color: #FDFDFF;
+    font-family: Montserrat, sans-serif;
+    font-size: 25px;
+    width: 545px;
+    font-weight: normal;
+    margin-left: -11.5%;
+    margin-top: 3%;
+    margin-bottom: 10%;
+}
+
+.rud {
+    height: 49px;
+    width: 265px;
+    background-color:#95E6D6;
+    border: 2px solid #95E6D6;
+    border-radius: 10px;
+    color:  black;
+    font-family: Montserrat, sans-serif;
+    padding: 2px 4px;
+    font-size: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    float: inline-end;
+    margin-top: -14%;
+    margin-right: 29%;
+}
+
+.rud:hover {
+    height: 49px;
+    width: 265px;
+    background-color: #15181EFF;
+    border: 2px solid #95E6D6;
+    border-radius: 10px;
+    color: #95E6D6;
+    line-height: 30.48px;
+    font-weight: 700;
+    font-family: Montserrat, sans-serif;
+    font-size: 20px;
+    padding: 2px 4px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.adres {
+    padding-left: 4%;
+    color: #FDFDFF;
+    font-family: Roboto, sans-serif;
+    font-size: 15px;
+    width: 735px;
+    font-weight: normal;
+    margin-left: 3%;
+}
+
+.curier {
+    padding-left: 4%;
+    color: #FDFDFF;
+    font-family: Roboto, sans-serif;
+    font-size: 15px;
+    width: 735px;
+    font-weight: normal;
+    margin-left: 12%;
 }
