--- a/templates/set_pvz.html
+++ b/templates/set_pvz.html
@@ -82,19 +82,32 @@ function redirectToMain() {
 
             <div class="block-right">
                 <form method="POST">
-                    <div class="text"><
+                    <div class="text">
                         <h1 class="fill">Курьер</h1>
+                        <div class="butt-one">
+                            <button type="button" class="ruf">Назад</button>
+                            <h1 class="but">Курьер</h1>
+                            <h1 class="bet">/</h1>
+                            <h1 class="bat">Отправить курьера</h1>
+                        </div>
                         <h1 class="fill_grad">Куда поедут эти курьеры?</h1>
+                        <h2 class="text-curier">Выберите курьер, по которому маршруту он поедет</h2>
+                        <button type="button" class="rud">Сформировать</button>
                     </div>
-
+                    <h1 class="adres">Адрес</h1>
+                    <h1 class="curier">Курьер</h1>
                     {% for el in addresses %}
-                            <h1 class="check-text-one">{{ el }}</h1>
-                            <select name="">
-                                <option></option>
-                                {% for courier in couriers %}
-                                <option>{{courier}}</option>
-                                {% endfor %}
-                            </select>
+                        <div id="blocks-container" class="blockone">
+                            <div class="opt">
+                                <h1 class="check-text-one">{{ el }}</h1>
+                                <select name="" class="custom-option">
+                                    <option></option>
+                                    {% for courier in couriers %}
+                                    <option>{{courier}}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
                     {% endfor %}
                 </form>
             </div>
