added some changes

--- a/static/main_page.css
+++ b/static/main_page.css
@@ -692,3 +692,14 @@ input:checked + .label:before {
     font-weight: normal;
     margin-left: 12%;
 }
+
+.check-text-adres {
+    padding-left: 5%;
+    color: #000;
+    font-family: Montserrat, sans-serif;
+    font-size: 15px;
+    white-space: nowrap;
+    font-weight: normal;
+    margin-left: 0;
+    overflow: hidden;
+}
