--- a/templates/set_pvz.html
+++ b/templates/set_pvz.html
@@ -99,7 +99,7 @@ function redirectToMain() {
                     {% for el in addresses %}
                         <div id="blocks-container" class="blockone">
                             <div class="opt">
-                                <h1 class="check-text-one">{{ el }}</h1>
+                                <h1 class="check-text-adres">{{ el }}</h1>
                                 <select name="" class="custom-option">
                                     <option></option>
                                     {% for courier in couriers %}
