--- a/static/send_courier.css
+++ b/static/send_courier.css
@@ -599,19 +599,8 @@ input:checked + .lab:before {
     margin-left: 0px;
 }
 
-.lol {
 
-    /*cursor: default;*/
-    /*font-family: Montserrat, sans-serif;*/
-    /*font-weight: normal;*/
-    /*font-size: 25px;*/
-    /*padding-bottom: 100px;*/
-    /*margin-top: -100px;*/
-    /*vertical-align: middle;*/
-    /*margin-left: 120px;*/
-}
-
-.lol:before {
+label[lol]:before {
     content: " ";
     display: inline-block;
     margin-right: 100px;
@@ -624,4 +613,9 @@ input:checked + .lab:before {
     border: 2px solid rgba(21, 24, 30, 1);
     border-radius: 13px;
     vertical-align: middle;
+}
+
+input:checked + label[lol]:before {
+    background-color: rgba(24, 32, 38, 1);
+    padding: -4px;
 }
