--- a/templates/set_pvz.html
+++ b/templates/set_pvz.html
@@ -99,13 +99,17 @@ function redirectToMain() {
                     {% for el in addresses %}
                         <div id="blocks-container" class="blockone">
                             <div class="opt">
-                                <h1 class="check-text-adres">{{ el }}</h1>
-                                <select name="" class="custom-option">
-                                    <option></option>
-                                    {% for courier in couriers %}
-                                    <option>{{courier}}</option>
-                                    {% endfor %}
-                                </select>
+                                <div class="pvz">
+                                    <h1 class="check-text-adres">{{ el }}</h1>
+                                </div>
+                                <div class="pvz-check">
+                                    <select name="" class="custom-option">
+                                        <option></option>
+                                        {% for courier in couriers %}
+                                        <option>{{courier}}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     {% endfor %}
