--- a/static/send_courier.css
+++ b/static/send_courier.css
@@ -405,7 +405,7 @@ input:checked + .lab:before {
     font-size: 15px;
     width: 735px;
     font-weight: normal;
-    margin-left: 0;
+    margin-left: 1%;
     margin-top: 60px;
 }
 
@@ -416,7 +416,7 @@ input:checked + .lab:before {
     font-size: 15px;
     width: 735px;
     font-weight: normal;
-    margin-left: 0;
+    margin-left: 0.7%;
     margin-top: 60px;
 }
 
@@ -427,7 +427,7 @@ input:checked + .lab:before {
     font-size: 15px;
     width: 735px;
     font-weight: normal;
-    margin-left: 5px;
+    margin-left: 1%;
     margin-top: 60px;
 }
 
@@ -438,14 +438,14 @@ input:checked + .lab:before {
     font-size: 15px;
     width: 735px;
     font-weight: normal;
-    margin-left: 2px;
+    margin-left: 1.2%;
     margin-top: 60px;
 }
 
 .block-new {
     background-color: white;
     height: 50px;
-    width: 1200px;
+    width: 1100px;
     margin-top: 1%;
     margin-left: 4%;
     color: rgba(244, 244, 248, 1);
@@ -482,7 +482,7 @@ input:checked + .lab:before {
     font-size: 15px;
     width: 735px;
     font-weight: normal;
-    margin-left: 0;
+    margin-left: -2%;
     margin-top: 60px;
 }
 
@@ -596,7 +596,7 @@ input:checked + .lab:before {
     font-size: 15px;
     width: 100px;
     font-weight: normal;
-    margin-left: 0px;
+    margin-left: 6%;
 }
 
 
