--- a/templates/mobile_auth.html
+++ b/templates/mobile_auth.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вход</title>
-    <link rel="stylesheet" href="mobile_auth.css" />
+    <link rel="stylesheet" href="../static/mobile_auth.css" />
 </head>
 
 
