--- a/templates/send_courier.html
+++ b/templates/send_courier.html
@@ -224,7 +224,10 @@ document.addEventListener("DOMContentLoaded", function() {
                             <label class="lol" for="checkbox-{{ el.id }}">
                             <div class="text-block">
                                 <h1 class="date-block">{{ el.name }} {{ el.surname }}</h1>
-                                <h1 class="give-block">{{ el.auto_тmodel }} gjgggj</h1>
+                                <h1 class="give-block">{{ el.auto }}</h1>
+                                <h1 class="give-block">{{ el.auto_number }}</h1>
+                                <h1 class="give-block">{{ el.phone }}</h1>
+                                <h1 class="give-block">Штат</h1>
                             </div>
                             </label>
                         </div>
