--- a/templates/send_courier.html
+++ b/templates/send_courier.html
@@ -227,7 +227,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                 <h1 class="give-block">{{ el.auto }}</h1>
                                 <h1 class="give-block">{{ el.auto_number }}</h1>
                                 <h1 class="give-block">{{ el.phone }}</h1>
-                                <h1 class="give-block">Штат</h1>
+{#                                <h1 class="give-block">Штат</h1>#}
                             </div>
                             </label>
                         </div>
