--- a/templates/mobile_main.html
+++ b/templates/mobile_main.html
@@ -23,8 +23,52 @@
             </div>
             
             <div class="block-bottom">
-            </div>
+                <h1 class="fill-bottom">26 - ти Бакинских Комиссаров д. 4к2</h1>
+                <div class="box">
+                    <img class="ellipse" src="../static/ellipse-curier.png">
+                    <h1 class="inf1">Роман</h1>
+                    <h2 class="inf2">Телефон: 77777777777 Код: 66666</h2>
+                    <img class="vector" src="../static/Vector 14.png">
+                </div>
+                <div class="box">
+                    <img class="ellipse" src="../static/ellipse-curier.png">
+                    <h1 class="inf1">Роман</h1>
+                    <h2 class="inf2">Телефон: 77777777777 Код: 66666</h2>
+                    <img class="vector" src="../static/Vector 14.png">
+                </div>
+                <div class="box">
+                    <img class="ellipse" src="../static/ellipse-curier.png">
+                    <h1 class="inf1">Роман</h1>
+                    <h2 class="inf2">Телефон: 77777777777 Код: 66666</h2>
+                    <img class="vector" src="../static/Vector 14.png">
+                </div>
+                <div class="box">
+                    <img class="ellipse" src="../static/ellipse-curier.png">
+                    <h1 class="inf1">Роман</h1>
+                    <h2 class="inf2">Телефон: 77777777777 Код: 66666</h2>
+                    <img class="vector" src="../static/Vector 14.png">
+                </div>
+                <div class="box">
+                    <img class="ellipse" src="../static/ellipse-curier.png">
+                    <h1 class="inf1">Роман</h1>
+                    <h2 class="inf2">Телефон: 77777777777 Код: 66666</h2>
+                    <img class="vector" src="../static/Vector 14.png">
+                </div>
+                <div class="box">
+                    <img class="ellipse" src="../static/ellipse-curier.png">
+                    <h1 class="inf1">Роман</h1>
+                    <h2 class="inf2">Телефон: 77777777777 Код: 66666</h2>
+                    <img class="vector" src="../static/Vector 14.png">
+                </div>
 
+                <h1 class="fill-bottom">Улица коммонавта яковлева, шоссе этузиасторв, дом19</h1>
+                <div class="box">
+                    <img class="ellipse" src="../static/ellipse-curier.png">
+                    <h1 class="inf1">Роман</h1>
+                    <h2 class="inf2">Телефон: 77777777777 Код: 66666</h2>
+                    <img class="vector" src="../static/Vector 14.png">
+                </div>
+            </div>
         </div>
     </body>
 
