--- a/static/mobile_auth.css
+++ b/static/mobile_auth.css
@@ -20,9 +20,6 @@ p {
 }
 
 .rate-two {
-    width: 300px;
-    margin-top: 15%;
-    margin-left: 11%;
     text-align: center;
     color: #000000;
     font-family: Montserrat, sans-serif;
@@ -31,11 +28,6 @@ p {
 }
 
 .rate-three {
-    width: 321px;
-    margin-top: -2%;
-    margin-left: 8%;
-    margin-bottom: 15%;
-    line-height: 18.29px;
     text-align: center;
     color: #000000;
     font-family: Montserrat, sans-serif;
@@ -45,8 +37,6 @@ p {
 
 input.one {
     display: block;
-    margin-top: 15px;
-    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
     height: 42px;
@@ -81,7 +71,7 @@ input:focus.one {
 }
 
 button {
-    margin-top: 90%;
+    margin-top: 10vh;
     height: 42px;
     width: 328px;
     background-color:#82C9BB;
